Update controller unit tests to mock view callbacks